--- a/package.json
+++ b/package.json
@@ -9,19 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@phosphor-icons/react": "^2.1.7",
+    "@thatopen/components": "^2.4.10",
+    "@thatopen/components-front": "^2.4.10",
+    "@thatopen/fragments": "^3.0.3",
+    "@thatopen/ui": "^2.4.5",
+    "@thatopen/ui-obc": "^2.4.3",
+    "clsx": "^2.1.1",
+    "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "stats.js": "^0.17.0",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animated": "^2.0.0",
+    "three": "^0.175.0",
+    "web-ifc": "^0.0.68"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@types/three": "^0.176.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.5",
+    "typescript": "^5"
   }
 }
